log
Wed 08 May 2024 07:46:45 PM UTC: 
 tests:  1|8
total_score: 0/70
0008785
Thu 09 May 2024 01:03:06 AM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 38 insertions(+), 20 deletions(-)
 tests:  4|7
total_score: 5/70
ea03519
Fri 10 May 2024 02:06:47 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|6
total_score: 15/70
b033535
Fri 10 May 2024 07:13:59 PM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++++-
 1 file changed, 39 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:93:9: error: expected identifier or ‘(’ before ‘}’ token
   93 |         }
      |         ^
treemap.c:94:5: error: expected identifier or ‘(’ before ‘}’ token
   94 |     }
      |     ^
treemap.c:95:1: error: expected identifier or ‘(’ before ‘}’ token
   95 | }
      | ^
Compilation failed
4b827a7
Fri 10 May 2024 07:14:13 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
088f259
Fri 10 May 2024 07:15:26 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
a0e7e79
Fri 10 May 2024 07:30:34 PM UTC: 
 treemap.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 55 insertions(+)
 tests:  16|4
total_score: 30/70
2ca9fc2
Sat 11 May 2024 07:05:16 PM UTC: 
 treemap.c | 41 ++++++++++++++++++++++-------------------
 1 file changed, 22 insertions(+), 19 deletions(-)
 tests:  0|0
33a6330
Sat 11 May 2024 07:06:48 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
69643b1
Sat 11 May 2024 07:07:00 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
b65bd3b
Sat 11 May 2024 07:10:16 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
4aff713
Sat 11 May 2024 07:44:12 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++------
 1 file changed, 30 insertions(+), 6 deletions(-)
 tests:  0|0
b64e100
Sat 11 May 2024 08:10:35 PM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
3d41248
Sat 11 May 2024 08:16:57 PM UTC: 
 treemap.c | 75 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 75 insertions(+)
 tests:  17|4
total_score: 35/70
a42f661
Sat 11 May 2024 08:32:36 PM UTC: 
 treemap.c | 114 +++++++++++++++++++++-----------------------------------------
 1 file changed, 38 insertions(+), 76 deletions(-)
 tests:  0|0
d9715ad
Sat 11 May 2024 08:33:47 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
4003714
Sat 11 May 2024 08:35:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|3
total_score: 45/70
f7611ff
Sat 11 May 2024 08:54:42 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  23|3
total_score: 45/70
509f471
